# llm-chat

./: README.md  pyproject.toml
.github/workflows/: CI.yml
llm-chat/: main.py
src/llm_chat/: cli.py
tests/: test_cli.py
